#2131 Fix select menu text color on iOS Safari (#2133)
* chore: agent daily for #2131

* chore: append opened PR URL to runner log

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -249,6 +249,8 @@
   select {
     appearance: none;
     background-image: url("../img/dropdown.png");
+    color: var(--color-text);
+    -webkit-text-fill-color: currentColor;
   }
 
   .select-shell::after {
@@ -851,6 +853,8 @@
   select {
     appearance: none;
     background-image: url("../img/dropdown-dm.png");
+    color: var(--color-text-dark);
+    -webkit-text-fill-color: currentColor;
   }
 
   .select-shell::after {
